2012-03-02  Werner Lemberg  <wl@gnu.org>

	Fix Savannah bug #33660.

	* src/ftcommon.c: Include `FT_XFREE86_H'.
	(file_suffixes): Remove.
	(my_face_requester): Check whether font driver is `Type 1' instead
	of relying on the file suffix.
	Additionally, prefer `.afm' over `.pfm'.
	(FTDemo_Install_Font): Don't try various suffixes.
	Allocate more memory for `font->filepathname' as needed by
	`my_face_requester'.

	* src/ftdiff.c: Include `ftcommon.h' and `common.h'.
	Remove declaration of `error' everywhere.
	(usage): Updated.
	Add argument for binary name.
	Update all callers.
	(event_help): Updated.

	* src/ftgrid.c (usage): Updated.

	* src/ftstring.c (event_help, usage): Updated.

	* src/ftview.c (usage): Updated.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftstring.c: Remove redundant code; formatting.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff.c: Formatting.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftgrid.c: Remove redundant code; formatting.

2012-03-02  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c: Remove dead code; formatting.

2012-02-13  Peter Grandi  <pg_mh@mh.to.sabi.co.UK>

	[ftview] Implement cycling backwards for rendering and LCD modes.

	* src/ftview.c (Process_Event): Handle keys `K' and `backspace'.
	(event_help): Updated.

2012-02-13  Werner Lemberg  <wl@gnu.org>

	Fix X11 keyboard handling.

	* graph/grevents.h (grKey): Shift special keys to a higher range,
	otherwise it can happen that they are processed twice.  For example,
	`grKeyBackSpace' also returns key code 8 under X11, and this was
	previously mapped to `grKeyF8'.

2011-12-07  Antoine Leca  <Antoine-Freetype@Leca-Marti.org>

	Fix printf specifications and parameters.

	* src/ttdebug.c (Cur_U_Line, RunIns): Use "%hu" for FT_UShort,
	"&ld" for FT_Pos; drop the "h" in "%hx" for FT_Byte parameters
	and cast the parameters to (unsigned) ("%hhx" is C99 only, and
	often unimplemented). Noticed by clang.

2011-12-02  suzuki toshiya  <mpsuzuki@hiroshima-u.ac.jp>
