@@ -1,3 +1,9 @@
+2012-03-03  Werner Lemberg  <wl@gnu.org>
+
+	Remove unused function.
+
+	* src/ftcommon.[ch] (FTDemo_Set_Current_Pointsize): Remove.
+
 2012-03-02  Werner Lemberg  <wl@gnu.org>
 
 	Fix Savannah bug #33660.
